# vtmate

./: .gitignore  Cargo.toml  README.md  build.rs  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.ps1  cross_build.sh  installer.sh
.github/workflows/: build.yml
demo/: ai-mate 0.3.0 - English speech demo.mov
docs/: app.js  diagrams.excalidraw  index.html  styles.css
docs/en/: configuration.html  documentation.html  features.html  index.html  installation.html  video.html
docs/es/: configuration.html  documentation.html  features.html  index.html  installation.html  video.html
spec/: acceleration.txt  context.txt  memory.md  messaging.txt  threads.txt
src/: assets.rs  audio.rs  config.rs  conversation.rs  debate.rs  keyboard.rs  llm.rs  log.rs  main.rs  memory.rs  playback.rs  record.rs  router.rs  state.rs  stt.rs  tools.rs  tts.rs  ui.rs  util.rs
src/tools/: apply_patch.rs  bash_command.rs  glob.rs  grep.rs  http_request.rs  read_file.rs  remember.rs  search.rs  store_memory.rs  web_fetch.rs
src/tts/: kokoro_tts.rs  opentts_tts.rs  supersonic2_tts.rs  supertonic_tts.rs
tests/: config_test.rs
tests/tools/: apply_patch_test.rs  glob_test.rs  grep_test.rs  read_file_test.rs
